# jiuwen-agentcore

./: .gitignore  README.en.md  pyproject.toml
examples/: 天气查询WorkflowAgent.md
examples/prompt_tune/: prompt_tune.md
examples/react_agent/: weather_assistant.md
examples/workflow_agent/: weather_reporter.md  天气查询WorkflowAgent.md
jiuwen/agent/: react_agent.py  workflow_agent.py
jiuwen/agent/common/: enum.py  schema.py
jiuwen/agent/config/: base.py  react_config.py  workflow_config.py
jiuwen/agent/context/: controller_context_manager.py  workflow_manager.py
jiuwen/agent/controller/: base.py  react_controller.py  workflow_controller.py
jiuwen/agent/state/: react_state.py
jiuwen/controller/: react_agent.py
jiuwen/controller/common/: enum.py  schema.py  sub_task.py
jiuwen/controller/config/: base.py  react_config.py
jiuwen/controller/handler/: base.py
jiuwen/controller/mode/: base.py  react_controller.py
jiuwen/controller/state/: base.py  react_state.py
jiuwen/core/agent/: agent.py
jiuwen/core/component/: base.py  branch_comp.py  branch_router.py  break_comp.py  end_comp.py  exec_workflow_base.py  intent_detection_comp.py  llm_comp.py  loop_comp.py  questioner_comp.py  set_variable_comp.py  start_comp.py  tool_comp.py  workflow_comp.py
jiuwen/core/context/: agent_context.py  config.py  context.py  mq_manager.py  state.py  store.py  utils.py
jiuwen/core/graph/: base.py  executable.py  graph_state.py  vertex.py
jiuwen/core/runtime/: callback_manager.py
jiuwen/core/stream/: base.py  emitter.py  manager.py  writer.py
tests/tracer/: test.py
(+90 files in other folders)
