[project]
name = "jiuwen-opensource"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp==3.11.10",
    "langgraph==0.5.3",
    "mcp==1.7.1",
    "pydantic==2.10.6",
    "python-dateutil>=2.9.0.post0",
    "sqlalchemy>=2.0.41",
]

[tool.uv]
default-groups = ['dev']

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"

[dependency-groups]
dev = [
    "autodoc-pydantic==2.2.0",
    "coverage==7.7.1",
    "pytest==8.3.5",
    "pytest-asyncio>=1.0.0",
    "pytest-mock==3.14.0",
    "ruff==0.11.2",
]

[tool.coverage.run]
omit = ["tests/*"]
